Add plan 017 for git safety hooks blocking --no-verify
- Create .claude/user-plans/017-git-safety-hooks.md with task breakdown
- Add gitignore exception for .claude/user-plans/ directory
- Plan includes research, implementation, testing, and documentation tasks

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,7 @@ claude-runtime/.claude-*/commands/*/
 # Web session runtime (.claude/ in repo root)
 .claude/*
 !.claude/settings.json
+!.claude/user-plans/
 
 # Task automation runtime state
 .claude-task-logs/
