feat: add /plans slash command for plan summary
Creates a new planning/plans.md slash command that generates a high-level
table summary of all plans in .claude/user-plans/.

Changes:
- Add claude-runtime/.claude-max/commands/planning/plans.md (command source)
- Update extended-commands.nix to deploy planning commands
- Update .gitignore to allow .claude-max/commands/*/ source directories

--- a/.gitignore
+++ b/.gitignore
@@ -86,8 +86,10 @@ claude-runtime/.claude-*/commands/globalmemory.*
 claude-runtime/.claude-*/commands/*remember.*
 claude-runtime/.claude-*/commands/next-task.*
 
-# Nix-managed slash command subdirectories (all symlinks to nix store)
+# Nix-managed slash command subdirectories (symlinks to nix store)
+# Exception: .claude-max/commands/* are source files that get deployed
 claude-runtime/.claude-*/commands/*/
+!claude-runtime/.claude-max/commands/*/
 
 # Web session runtime (.claude/ in repo root)
 .claude/*
