--- a/.gitignore
+++ b/.gitignore
@@ -87,9 +87,8 @@ claude-runtime/.claude-*/commands/*remember.*
 claude-runtime/.claude-*/commands/next-task.*
 
 # Nix-managed slash command subdirectories (symlinks to nix store)
-# Exception: .claude-max/commands/* are source files that get deployed
+# Source files live in home/modules/claude-code/commands/ (not in claude-runtime)
 claude-runtime/.claude-*/commands/*/
-!claude-runtime/.claude-max/commands/*/
 
 # Web session runtime (.claude/ in repo root)
 .claude/*
